<package format="3">
  <name>motor_board_md49_ros2</name>
  <version>0.1.0</version>
  <description>Paquete ROS 2 para comunicarse con MotorBoard MD49</description>

  <maintainer email="urubots@utec.edu.uy.com">Urubots</maintainer>
  <license>Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>