<?xml version="1.0"?>
<package format="3">
  <name>motor_board_md49_ros2</name>
  <version>0.1.0</version>
  <description>Controlador ROS 2 para la placa MD49</description>
  
  <maintainer email="urubots@utec.edu.uy">Urubots</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>teleop_twist_keyboard</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
